Specify go 1.17 for the github workflow
Signed-off-by: Sandy Urazayev <ctu@ku.edu>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,15 @@
-name: Build
+name: Build and Test
 on: [push]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Go 1.17
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.17
+        id: go
+      
       - name: Checkout 🛎️
         uses: actions/checkout@v2
         with:
